--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ protobuf==3.20.3
 mediapipe==0.10.9
 opencv-python==4.9.0.80
 numpy==1.26.4
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+fastapi==0.110.0
+uvicorn==0.27.1
+pydantic==2.6.3 
