--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-grpcio==1.48.2
-grpcio-tools==1.48.2
-protobuf>=4.21.6
-mediapipe==0.10.9
-opencv-python==4.9.0.80
+grpcio==1.71.0
+grpcio-tools==1.71.0
+protobuf==6.30.2
+mediapipe==0.10.21
+opencv-python==4.11.0.86
 numpy==1.26.4
 python-dotenv==1.0.1
-fastapi==0.110.0
-uvicorn==0.27.1
-pydantic==2.6.3 
+fastapi==0.115.12
+uvicorn==0.34.2
+pydantic==2.11.4 
