--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 grpcio==1.71.0
 grpcio-tools==1.71.0
-protobuf==6.30.2
+protobuf>=5.26.1,<6.0dev
 mediapipe==0.10.21
 opencv-python==4.11.0.86
 numpy==1.26.4
