--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,67 @@
-# --- 필수 패키지 ---
-mediapipe==0.10.21
-protobuf==4.25.3        # mediapipe가 요구 (protobuf <5)
-grpcio==1.60.1
-grpcio-tools==1.54.0    # protobuf 4.x와 호환 가능한 마지막 안정 버전
-
-# --- FastAPI 관련 ---
+absl-py==2.2.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.2.0
+contourpy==1.3.2
+cycler==0.12.1
+dnspython==2.7.0
+email_validator==2.2.0
+exceptiongroup==1.3.0
 fastapi==0.111.0
-uvicorn==0.34.2
-
-# --- 데이터 처리 ---
+fastapi-cli==0.0.7
+flatbuffers==25.2.10
+fonttools==4.58.0
+grpcio==1.71.0
+grpcio-tools==1.71.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+jax==0.6.0
+jaxlib==0.6.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+mediapipe==0.10.21
+ml_dtypes==0.5.1
 numpy==1.26.4
-opencv-python==4.8.1.78
 opencv-contrib-python==4.8.1.78
-
-# --- pydantic 관련 (FastAPI 호환) ---
+opencv-python==4.8.1.78
+opt_einsum==3.4.0
+orjson==3.10.18
+packaging==25.0
+pillow==11.2.1
+protobuf==5.29.4
+pycparser==2.22
 pydantic==2.11.4
-
-# --- 기타 ---
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+rich==14.0.0
+rich-toolkit==0.14.5
+scipy==1.15.3
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sounddevice==0.5.1
+starlette==0.37.2
+typer==0.15.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+ujson==5.10.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
