--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ anyio==4.9.0
 attrs==25.3.0
 certifi==2025.4.26
 cffi==1.17.1
-contourpy==1.3.0
+click==8.2.0
+contourpy==1.3.2
 cycler==0.12.1
 dnspython==2.7.0
 email_validator==2.2.0
