--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,12 @@ cycler==0.12.1
 dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.3.0
-fastapi==0.111.0
+fastapi==0.115.12
 fastapi-cli==0.0.7
 flatbuffers==25.2.10
 fonttools==4.58.0
-grpcio==1.71.0
-grpcio-tools==1.71.0
+grpcio
+grpcio-tools
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -33,12 +33,12 @@ mediapipe==0.10.21
 ml_dtypes==0.5.1
 numpy==1.26.4
 opencv-contrib-python==4.8.1.78
-opencv-python==4.8.1.78
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 orjson==3.10.18
 packaging==25.0
 pillow==11.2.1
-protobuf==5.29.4
+protobuf
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
