--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,37 @@
-server {
-    listen 443 ssl http2;
-    server_name python.signorder.kr;
+worker_processes auto;
 
-    ssl_certificate     /etc/letsencrypt/live/python.signorder.kr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/python.signorder.kr/privkey.pem;
+events {
+    worker_connections 1024;
+}
 
-    location /FrameToMarkingData {
-        grpc_pass grpc://localhost:8088;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-        grpc_set_header Host $host;
-        grpc_set_header X-Real-IP $remote_addr;
-        grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        grpc_set_header X-Forwarded-Proto $scheme;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-        grpc_read_timeout 300s;
-        grpc_send_timeout 300s;
-        grpc_connect_timeout 75s;
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 443 ssl http2;
+        server_name python.signorder.kr;
+
+        ssl_certificate     /etc/letsencrypt/live/python.signorder.kr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/python.signorder.kr/privkey.pem;
+
+        location /FrameToMarkingData {
+            grpc_pass grpc://localhost:8088;
+
+            grpc_set_header Host $host;
+            grpc_set_header X-Real-IP $remote_addr;
+            grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            grpc_set_header X-Forwarded-Proto $scheme;
+
+            grpc_read_timeout 300s;
+            grpc_send_timeout 300s;
+            grpc_connect_timeout 75s;
+        }
     }
 }
