--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         ssl_certificate     /etc/letsencrypt/live/python.signorder.kr/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/python.signorder.kr/privkey.pem;
 
-        location /FrameToMarkingData {
+        location /ChangeMiddlware {
             grpc_pass grpc://localhost:8088;
 
             grpc_set_header Host $host;
